--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
       <div class="brand"><h1><span>Clifford</span> <span></span>Estrella</h1></div>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
+          <a href="https://www.facebook.com/clifford.estrella"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
+          <a href="https://www.instagram.com/cl4die"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
         </div>
-        <div class="social-item">
+        <!-- <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"/></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png"/></a>
-        </div>
+        </div> -->
       </div>
       <p>Copyright © 2020 Clifford Estrella. All rights reserved</p>
     </div>
